# codebeaver-ai

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ExampleREADME.md  MANIFEST.in  README.md  alert_manager.py  codebeaver.yml  coverage.json  expense_tracker.py  go.mod  investment_tracker.py  jest.config.js  jest.setup.js  main.go  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
.codebeaver/: junit.xml
.github/workflows/: release.yml
api/: handlers.go  handlers_test.go
app/: main.py
pkg/pasta/: pasta.go  pasta_test.go
pkg/pizza/: pizza.go
src/: App.css  App.tsx  setupTests.ts
src/codebeaver/: CodebeaverConfig.py  ContentCleaner.py  E2E.py  ResponseParser.py  TestFilePattern.py  TestGenerator.py  TestRunner.py  UnitTestGenerator.py  UnitTestManager.py  UnitTestRunner.py  WorkspaceConfig.py  cli.py  types.py
src/codebeaver/models/: anthropic.py  ollama.py  openai.py  provider_factory.py
src/codebeaver/templates/: bun.yml  django.yml  javascript-22-jest-npm.yml  javascript-22-jest-pnpm.yml  javascript-22-jest-yarn.yml  javascript-22-vitest-npm.yml  javascript-22-vitest-pnpm.yml  nyc.yml  pytest.yml  typescript-18-jest-pnpm.yml  typescript-22-jest-npm.yml  typescript-22-jest-pnpm.yml  typescript-22-jest-yarn.yml  vitest.yml  (+3 more)
src/utils/: stringOperations.ts
taskmanager/: settings.py  urls.py
tasks/: models.py  serializers.py  urls.py  utils.py  views.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_utils.py
templates/: CONTRIBUTING.md  LICENSE.md  bun.yml  javascript-22-jest-npm.yml  javascript-22-jest-pnpm.yml  javascript-22-jest-yarn.yml  jest.yml  typescript-18-jest-pnpm.yml  typescript-20-jest-pnpm.yml  typescript-22-jest-npm.yml  typescript-22-jest-pnpm.yml  typescript-22-jest-yarn.yml  typescript-22-vitest-npm.yml  typescript-22-vitest-pnpm.yml  typescript-22-vitest-yarn.yml  unittest.yml
tests/: __init__.py  test_AnalyzeError.py  test_CodebeaverConfig.py  test_ContentCleaner.py  test_E2E.py  test_GitUtils.py  test_Report.py  test_ResponseParser.py  test_TestFilePattern.py  test_TestRunner.py  test_UnitTestGenerator.py  test_alert_manager.py  test_anthropic.py  test_cli.py  test_deepseek.py  test_e2e.py  test_expense_tracker.py  test_investment_tracker.py  test_main.py  test_mistral.py  test_ollama.py  test_openai.py  test_types.py
tests/codebases/pytest/: pyest.ini  pyproject.toml
tests/codebases/pytest/tests/: test_alert_manager.py
(+17 files in other folders)
