[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alert-manager"
version = "0.1.0"
description = "A simple alert management system"
requires-python = ">=3.8"
authors = [
    { name = "Test Author", email = "test@example.com" }
]
dependencies = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-json-report>=1.5.0"
]

[project.optional-dependencies]
test = [
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]